--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
     buildToolsVersion "24.0.0"
 
     defaultConfig {
-        applicationId "com.adkdevelopment.bbcreader"
+        applicationId "com.adkdevelopment.rssreader"
         minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
@@ -48,7 +48,6 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
 }
 
 ext {
@@ -56,7 +55,6 @@ ext {
     retrofitVersion = "2.1.0"
     butterknifeVersion = "8.1.0"
 }
-
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
