--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,6 @@ android {
     buildToolsVersion "24.0.0"
 
     defaultConfig {
-        applicationId "com.adkdevelopment.rssreader"
         minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
@@ -42,6 +41,14 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    productFlavors{
+        local {
+            applicationId "com.adkdevelopment.bbcreader"
+        }
+        market {
+            applicationId "com.adkdevelopment.rssreader"
         }
     }
     compileOptions {
