--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,8 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 2
-        versionName "1.01"
+        versionCode 3
+        versionName "1.02"
     }
     buildTypes {
         release {
@@ -66,6 +66,9 @@ ext {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
+    // find the memory leak
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
 
     compile "com.android.support:appcompat-v7:$compatVersion"
     compile "com.android.support:cardview-v7:$compatVersion"
