--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,19 +23,20 @@
  */
 
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'realm-android'
 apply plugin: 'android-apt'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion "24.0.2"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 24
-        versionCode 4
-        versionName "1.03"
+        targetSdkVersion 25
+        versionCode 5
+        versionName "1.04"
     }
     buildTypes {
         release {
@@ -55,10 +56,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    lintOptions {
+        lintConfig rootProject.file('gradle/lint.xml')
+    }
 }
 
 ext {
-    compatVersion = "24.2.1"
+    compatVersion = "25.0.0"
     retrofitVersion = "2.1.0"
     butterknifeVersion = "8.1.0"
 }
@@ -99,6 +103,12 @@ dependencies {
 
     // Image downloading, caching, etc
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
+        transitive = true;
+    }
+    compile('com.crashlytics.sdk.android:answers:1.3.10@aar') {
+        transitive = true;
+    }
 }
 
 retrolambda {
